# vectory

./: .gitignore  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
.streamlit/: config.toml
test/: test_datasets.py  test_experiments.py  test_query.py  test_spaces.py
vectory/: __init__.py  cli.py  datasets.py  demo.py  exceptions.py  experiments.py  indices.py  spaces.py  utils.py
vectory/db/: bulk.py  models.py
vectory/es/: api.py  client.py  docker.py  utils.py
vectory/visualization/: main.py  run.py  utils.py
