[tool.poetry]
name = "oss-project"
version = "0.1.0"
description = "Streamline the benchmark and experimentation process of your models that rely on generating embeddings"
authors = ["Theo Hintz <thintz.smc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^6.2.5"
ipykernel = "^6.7.0"
ipython = "^8.0.1"
ipdb = "^0.13.9"
mypy = "^0.931"
python-dotenv = "^0.19.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
